--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "sass": "^1.78.0",
+    "tatilima-lp-v2": "file:",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
